<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:orientation="vertical"
    android:background="@drawable/btn_custom_imbue"
    tools:context=".view.CalculatorsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewCalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-5981899111891359/7907575647">
        </com.google.android.gms.ads.AdView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="40dp"
            android:text="@string/calculators"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:gravity="center"/>

        <Button
            android:id="@+id/melee_skill_training"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/melee_training"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:background="@drawable/btn_custom_imbue"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/dist_skill_training"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dist_training"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:background="@drawable/btn_custom_imbue"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/shared_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shared_exp_calc"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:background="@drawable/btn_custom_imbue"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/hunt_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hunt_analyzer"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:background="@drawable/btn_custom_imbue"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/level_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level_calc"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:background="@drawable/btn_custom_imbue"
            android:layout_marginBottom="10dp"/>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewCalcTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="bottom|end"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-5981899111891359/1829252450">
        </com.google.android.gms.ads.AdView>


    </LinearLayout>


</ScrollView>