<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:orientation="vertical"
    android:background="@drawable/btn_custom_imbue"
    tools:context=".view.AdsRemovalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/ads_removal"
            android:textSize="35sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/item_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/remove_ads_message"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/btn_remove_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_custom_imbue"
            android:text="@string/click_ads_removal"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

</ScrollView>