<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/btn_custom_imbue"
    android:layout_margin="1dp"
    android:padding="10dp"
    tools:context=".calculators.SharedExpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/shared_exp_calc"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/main_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:background="@drawable/btn_custom_imbue"
            android:textColorHint="@color/white"
            android:hint="@string/player_level"
            android:textColor="@color/white"
            android:gravity="center"
            android:inputType="number"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/text_min_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/btn_custom_imbue"
                android:layout_margin="5dp"
                android:text="@string/min_level"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/text_max_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/btn_custom_imbue"
                android:layout_margin="5dp"
                android:text="@string/max_level"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>