<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/btn_custom_imbue"
    android:layout_margin="1dp"
    android:padding="5dp"
    tools:context=".view.ImbueActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewImbue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-5981899111891359/4543045705">
        </com.google.android.gms.ads.AdView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:text="@string/imbuements"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:gravity="center"/>

        <LinearLayout
            android:id="@+id/layout_attr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:onClick="attrClick"
            android:background="@drawable/btn_custom_imbue">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/type_extra"
                android:textSize="25sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_skill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:onClick="skillClick"
            android:background="@drawable/btn_custom_imbue">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/skills_increase"
                android:textSize="25sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:onClick="damageClick"
            android:background="@drawable/btn_custom_imbue">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/elemental_damage"
                android:textSize="25sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_damage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:onClick="protectionClick"
            android:background="@drawable/btn_custom_imbue">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/elemental_protection"
                android:textSize="25sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewImbueTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="bottom|end"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-5981899111891359/4814508446">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>


</ScrollView>